worked n another algorithm

--- a/EasyOCR_Algorithm_01.ipynb
+++ b/EasyOCR_Algorithm_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,17 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img=cv2.imread(\"passport/4.PNG\")\n",
+    "img=cv2.imread(\"passport/6.PNG\")\n",
     "max_h,max_w=img.shape[:2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,15 +158,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['P<FIMMAMNARI<<VILLE<VE[KKO<petteri']\n",
-      "['Cp2z485398FIn820826042908133260882<197r<<<6']\n"
+      "[]\n",
+      "['O', '4oncnUcurt']\n"
      ]
     }
    ],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,64 +207,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 89, 115, 162],\n",
-       "        [ 93, 119, 166],\n",
-       "        [ 92, 116, 164],\n",
+       "array([[[147, 138, 128],\n",
+       "        [149, 140, 130],\n",
+       "        [151, 142, 132],\n",
        "        ...,\n",
-       "        [127, 127, 127],\n",
-       "        [127, 127, 127],\n",
-       "        [127, 127, 127]],\n",
+       "        [ 96,  97,  93],\n",
+       "        [ 94,  93,  89],\n",
+       "        [ 93,  92,  88]],\n",
        "\n",
-       "       [[ 90, 116, 163],\n",
-       "        [ 90, 116, 163],\n",
-       "        [ 90, 114, 161],\n",
+       "       [[147, 138, 128],\n",
+       "        [148, 139, 129],\n",
+       "        [151, 142, 132],\n",
        "        ...,\n",
-       "        [127, 127, 127],\n",
-       "        [127, 127, 127],\n",
-       "        [127, 127, 127]],\n",
+       "        [ 95,  96,  92],\n",
+       "        [ 92,  93,  89],\n",
+       "        [ 92,  93,  89]],\n",
        "\n",
-       "       [[ 95, 121, 168],\n",
-       "        [ 96, 122, 169],\n",
-       "        [ 93, 117, 165],\n",
+       "       [[147, 138, 128],\n",
+       "        [149, 140, 130],\n",
+       "        [149, 140, 130],\n",
        "        ...,\n",
-       "        [127, 127, 127],\n",
-       "        [127, 127, 127],\n",
-       "        [127, 127, 127]],\n",
+       "        [ 95,  96,  92],\n",
+       "        [ 94,  95,  91],\n",
+       "        [ 94,  95,  91]],\n",
        "\n",
        "       ...,\n",
        "\n",
-       "       [[115, 124, 134],\n",
-       "        [118, 127, 137],\n",
-       "        [120, 129, 139],\n",
+       "       [[ 25,  29,  45],\n",
+       "        [ 27,  29,  45],\n",
+       "        [ 28,  29,  46],\n",
        "        ...,\n",
-       "        [127, 127, 127],\n",
-       "        [127, 127, 127],\n",
-       "        [127, 127, 127]],\n",
+       "        [ 58,  54,  52],\n",
+       "        [ 75,  73,  70],\n",
+       "        [ 47,  47,  46]],\n",
        "\n",
-       "       [[118, 127, 137],\n",
-       "        [120, 129, 139],\n",
-       "        [120, 129, 139],\n",
+       "       [[ 26,  28,  46],\n",
+       "        [ 25,  27,  45],\n",
+       "        [ 24,  26,  44],\n",
        "        ...,\n",
-       "        [127, 127, 127],\n",
-       "        [127, 127, 127],\n",
-       "        [127, 127, 127]],\n",
+       "        [ 58,  55,  51],\n",
+       "        [ 73,  75,  69],\n",
+       "        [ 46,  46,  44]],\n",
        "\n",
-       "       [[122, 131, 141],\n",
-       "        [123, 132, 142],\n",
-       "        [123, 132, 142],\n",
+       "       [[ 26,  28,  46],\n",
+       "        [ 26,  27,  46],\n",
+       "        [ 25,  27,  45],\n",
        "        ...,\n",
-       "        [127, 127, 127],\n",
-       "        [127, 127, 127],\n",
-       "        [127, 127, 127]]], shape=(344, 608, 3), dtype=uint8)"
+       "        [ 54,  51,  47],\n",
+       "        [ 71,  72,  67],\n",
+       "        [ 51,  52,  50]]], shape=(612, 442, 3), dtype=uint8)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,15 +338,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "[]\n"
+      "['Jig <chamg', '702 C', 'cO']\n",
+      "['J04iJnci 0o', '4OMLMUCDAc']\n"
      ]
     }
    ],
